--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-/node_modules
-/dist
+# Node dependencies
+/node_modules/
+
+# Electron build output
+/dist/
+/MyWheelApp-win32-*/
 *.exe
+
+# Logs
 *.log
+
+# macOS metadata
 .DS_Store
